dev: moving to api v2
